[gd_scene load_steps=3 format=3 uid="uid://dmbd8l080ptrq"]

[ext_resource type="Script" path="res://leaderboard/Leaderboard.gd" id="1"]

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(400, 50)

[node name="Leaderboard" type="Node2D"]
script = ExtResource("1")

[node name="GetLeaderboardRequest" type="HTTPRequest" parent="."]

[node name="SubmitLeaderboardScore" type="HTTPRequest" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Leaderboard" type="Control" parent="CanvasLayer"]

[node name="Panel" type="Panel" parent="CanvasLayer/Leaderboard"]

[node name="Top10Label" type="Label" parent="CanvasLayer/Leaderboard/Panel"]
text = "LEADERBOARD"

[node name="NextPageButton" type="Button" parent="CanvasLayer/Leaderboard/Panel/Top10Label"]
text = "->"

[node name="PrevPageButton2" type="Button" parent="CanvasLayer/Leaderboard/Panel/Top10Label"]
text = "<-"

[node name="Top10Grid" type="GridContainer" parent="CanvasLayer/Leaderboard/Panel"]
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="NewGameButton" type="Button" parent="CanvasLayer/Leaderboard"]
text = "Start a new game"

[node name="BackToMenuButton" type="Button" parent="CanvasLayer/Leaderboard/NewGameButton"]
text = "Menu"

[node name="CloseButton" type="Button" parent="CanvasLayer/Leaderboard"]
text = "X"

[node name="ScoreSubmitModal" type="Control" parent="CanvasLayer"]
modulate = Color(0.823529, 0.823529, 0.823529, 1)

[node name="Panel" type="Panel" parent="CanvasLayer/ScoreSubmitModal"]

[node name="NameLabel" type="Label" parent="CanvasLayer/ScoreSubmitModal/Panel"]
text = "Name"

[node name="NameValue" type="TextEdit" parent="CanvasLayer/ScoreSubmitModal/Panel/NameLabel"]
hint_tooltip = "Player Name"
text = "PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP"

[node name="TouchScreenNameInputButton" type="TouchScreenButton" parent="CanvasLayer/ScoreSubmitModal/Panel/NameLabel"]
position = Vector2(-34.9178, -15.6011)
shape = SubResource("3")
visibility_mode = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer/ScoreSubmitModal/Panel"]
text = "Score"

[node name="ScoreValue" type="Label" parent="CanvasLayer/ScoreSubmitModal/Panel/ScoreLabel"]
text = "1234"

[node name="SubmitYourScoreLabel" type="Label" parent="CanvasLayer/ScoreSubmitModal/Panel"]
text = "Submit your score!"

[node name="SubmitScoreButton" type="Button" parent="CanvasLayer/ScoreSubmitModal/Panel"]
disabled = true
text = "Submit"

[node name="CloseScoreSubmitButton" type="Button" parent="CanvasLayer/ScoreSubmitModal"]
text = "X"

[connection signal="request_completed" from="GetLeaderboardRequest" to="." method="_on_GetLeaderboardRequest_request_completed"]
[connection signal="request_completed" from="SubmitLeaderboardScore" to="." method="_on_SubmitLeaderboardScore_request_completed"]
[connection signal="pressed" from="CanvasLayer/Leaderboard/Panel/Top10Label/NextPageButton" to="." method="_on_NextPageButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Leaderboard/Panel/Top10Label/PrevPageButton2" to="." method="_on_PrevPageButton2_pressed"]
[connection signal="pressed" from="CanvasLayer/Leaderboard/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Leaderboard/NewGameButton/BackToMenuButton" to="." method="_on_BackToMenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Leaderboard/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="gui_input" from="CanvasLayer/ScoreSubmitModal/Panel/NameLabel/NameValue" to="." method="_on_NameValue_gui_input"]
[connection signal="text_changed" from="CanvasLayer/ScoreSubmitModal/Panel/NameLabel/NameValue" to="." method="_on_NameValue_text_changed"]
[connection signal="pressed" from="CanvasLayer/ScoreSubmitModal/Panel/NameLabel/TouchScreenNameInputButton" to="." method="_on_TouchScreenNameInputButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ScoreSubmitModal/Panel/SubmitScoreButton" to="." method="_on_SubmitScoreButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ScoreSubmitModal/CloseScoreSubmitButton" to="." method="_on_CloseScoreSubmitButton_pressed"]
